--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           # Automatically inject basePath in your Next.js configuration file and disable
           # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-          #
+          # Might have to update the basePath to src/jerry-vrabel-development... verfiying
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
       - name: Restore cache
