trying a different approach

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -22,12 +22,15 @@ jobs:
 
       - name: Build
         run: |
-          npm i
+          npm ci
           npm run build
           npm run export
+          touch out/.nojekyll
+          npm set-script build "next build"
+          npm set-script export "next export"
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./out
+          publish_dir: out
